--- a/config/database.yml
+++ b/config/database.yml
@@ -2,9 +2,9 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  username: postgres
-  password: password
-  host: db
+  # username: postgres
+  # password: password
+  # host: db
 
 development:
   <<: *default
